--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "dependencies": {
     "react": "^16.8.6",
+    "react-card-flip": "^0.7.1",
+    "react-date-picker": "^7.5.1",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "tachyons": "^4.11.1"
   },
   "scripts": {
     "start": "react-scripts start",
