--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "new-york-times-books",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://adamkjall.github.io/booktropolis",
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-card-flip": "^0.7.1",
@@ -17,6 +19,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
