--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "homepage": "https://adamkjall.github.io/booktropolis",
   "dependencies": {
-    "bootstrap": "^4.3.1",
+    "@material-ui/core": "^4.1.0",
+    "@material-ui/icons": "^4.1.0",
     "gh-pages": "^2.0.1",
     "react": "^16.8.6",
-    "react-bootstrap": "^1.0.0-beta.8",
     "react-card-flip": "^0.7.1",
     "react-date-picker": "^7.5.1",
     "react-dom": "^16.8.6",
