--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "homepage": "https://adamkjall.github.io/booktropolis",
   "dependencies": {
-    "@material-ui/core": "^4.1.0",
-    "@material-ui/icons": "^4.1.0",
+    "bootstrap": "^4.3.1",
     "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-card-flip": "^0.7.1",
@@ -13,6 +12,7 @@
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
     "react-scripts": "3.0.1",
+    "reactstrap": "^8.0.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "tachyons": "^4.11.1"
